--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 								<h2 class="major">jeux 1</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p> description a modifier ! </p>
-								<p> <u> Exemple</u> : salut voicie un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
+								<p> <u> Exemple</u> : salut voici un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
 							</article>
 
 						<!-- jeux 2 -->
@@ -52,7 +52,7 @@
 								<h2 class="major">jeux 2</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 							    <p> description a modifier ! </p>
-								<p> <u> Exemple</u> : salut voicie un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
+								<p> <u> Exemple</u> : salut voici un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
 							</article>
 
 						<!-- jeux 3 -->
@@ -60,7 +60,7 @@
 								<h2 class="major">jeux 3</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p> description a modifier ! </p>
-								<p> <u> Exemple</u> : salut voicie un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
+								<p> <u> Exemple</u> : salut voici un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
 							</article>
 
 						<!-- jeux 4 -->
@@ -68,7 +68,7 @@
 							<h2 class="major">jeux 4</h2>
 							<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
 							<p> description a modifier ! </p>
-								<p> <u> Exemple</u> : salut voicie un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
+								<p> <u> Exemple</u> : salut voici un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
 						</article>
 
 						<!-- jeux 5 -->
@@ -76,7 +76,7 @@
 							<h2 class="major">jeux 5</h2>
 							<span class="image main"><img src="images/pic05.jpg" alt="" /></span>
 							<p> description a modifier ! </p>
-								<p> <u> Exemple</u> : salut voicie un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
+								<p> <u> Exemple</u> : salut voici un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
 						</article>
 
 						<!-- jeux 6 -->
@@ -84,7 +84,7 @@
 							<h2 class="major">jeux 6</h2>
 							<span class="image main"><img src="images/pic06.jpg" alt="" /></span>
 							<p> description a modifier ! </p>
-								<p> <u> Exemple</u> : salut voisie un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
+								<p> <u> Exemple</u> : salut voisi un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
 						</article>
 
 					</div>
