--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>jeux maths</h1>
+								<h1>emir kibar</h1>
 								<p> Decouvrez les détails des jeux proposés ci-dessous</p>
 							</div>
 						</div>
