--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>semaine des mathématiques</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -16,75 +16,101 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<i class="fas fa-divide"></i>
+                             <style>
+                               .fa-divide {
+                                    font-size: 1.65em; 
+								    margin-top: 20px;
+								    display: inline-block;
+								}
+                            </style>
+
 						</div>
 						<div class="content">
-							<div class="inner">
-								<h1>jeux maths</h1>
-								<p> Decouvrez les détails des jeux proposés ci-dessous</p>
+								<div class="inner">
+									<h1>jeux maths</h1>
+									<p> Semaines des mathématiques </p>
+								</div>
 							</div>
-						</div>
 						<nav>
 							<ul>
-								<li><a href="#1">Jeux 1</a></li>
-								<li><a href="#2">Jeux 2</a></li>
-								<li><a href="#3">Jeux 3</a></li>
-								<li><a href="#4">Jeux 4</a></li>
+								<li><a href="#1">la quête aux énigmes</a></li>
+								<li><a href="#2">Maths en folie</a></li>
+								<li><a href="#3">lez'escape</a></li>
+								<li><a href="#4">Pajarita</a></li>
 								<li><a href="#5">jeux 5</a></li>
-								<li><a href="#6">Jeux 6</a></li>
+								<li><a href="#6">aide / info</a></li>
 							</ul>
 						</nav>
-					</header>
-
+                    </header>
+					
 				<!-- Main -->
 					<div id="main">
 
 						<!-- Jeux 1 -->
 							<article id="1">
-								<h2 class="major">jeux 1</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p> description a modifier ! </p>
-								<p> <u> Exemple</u> : salut voici un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
+								<h2 class="major">la quête aux énigmes</h2>
+
+								<p>
+								    Chasse aux énigmes dans tout le collège.<br>
+								    Chaque participant aura un carnet dans lequel trouver l'emplacement des énigmes<br> qui permettra d'arriver au mot magique...
+							    	Carnet à récupérer chez M. Klenklé, en salle A24, durant toute la semaine.
+							    </p>
+
 							</article>
 
 						<!-- jeux 2 -->
 							<article id="2">
-								<h2 class="major">jeux 2</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-							    <p> description a modifier ! </p>
-								<p> <u> Exemple</u> : salut voici un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
+								<h2 class="major">Maths en folie</h2>
+
+							    <p>
+								    Compétition de calcul mental rapide, par équipe de 3.
+								    9 thèmes de mathématiques (additions, multiplications...), donc 3 thèmes par membre de l'équipe.
+							    	Vendredi 14 mars, à partir de 15h45, en salle A24.
+							    	Inscription de votre équipe chez M. Klenklé.
+							    	Equipes mixtes possibles (adultes, élèves, classes différentes...)
+							    </p>
+
 							</article>
 
 						<!-- jeux 3 -->
 							<article id="3">
-								<h2 class="major">jeux 3</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p> description a modifier ! </p>
-								<p> <u> Exemple</u> : salut voici un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
+								<h2 class="major">lez'escape</h2>
+								<p> 
+									<u>Qualifications</u> :  <br /><br /> 
+									- Mardi 11 Mars (S3), <br /> 
+									- Jeudi 13 Mars (S3), <br />
+									Vous participez à une épreuve d'Escape Game que <br />
+									M. Klenklé vous présentera en début d'heure. 
+								</p> 
 							</article>
 
 						<!-- jeux 4 -->
 						<article id="4">
-							<h2 class="major">jeux 4</h2>
-							<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
-							<p> description a modifier ! </p>
-								<p> <u> Exemple</u> : salut voici un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
+							<h2 class="major">Pajarita</h2>
+						    
+							<p>
+								Création de la plus grande mosaïque du monde. Chaque personne, enfants et adultes, pourra créer un motif qui sera assemblé aux autres pour former une magnifique mosaïque.
+							    Le programme de construction est à chercher chez M. Klenklé, que vous trouverez dans la cour ou en salle A24.
+							</p>
+
+
 						</article>
 
 						<!-- jeux 5 -->
 						<article id="5">
 							<h2 class="major">jeux 5</h2>
-							<span class="image main"><img src="images/pic05.jpg" alt="" /></span>
-							<p> description a modifier ! </p>
-								<p> <u> Exemple</u> : salut voici un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
+							<p>
+								En cour ..
+							</p>
 						</article>
 
 						<!-- jeux 6 -->
 						<article id="6">
-							<h2 class="major">jeux 6</h2>
-							<span class="image main"><img src="images/pic06.jpg" alt="" /></span>
-							<p> description a modifier ! </p>
-								<p> <u> Exemple</u> : salut voisi un exemple qui sera mis pour la descrpition en tout cas le rendu de la page  </p>
+							<h2 class="major">informations</h2>
+							<p>
+								Pour plus de détails ou en cas de besoin d'aide, veuillez vous rendre auprès de M. Klenkle en salle A25.
+							</p>
 						</article>
 
 					</div>
