--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<article id="6">
 							<h2 class="major">informations</h2>
 							<p>
-								Pour plus de détails ou en cas de besoin d'aide, veuillez vous rendre auprès de M. Klenkle en salle A25.
+								Pour plus de détails ou en cas de besoin d'aide, veuillez vous rendre auprès d'une de ses personnes : Telman, Lina,  Arda, Nada, Sabine, Mohamed, Yusuf, Alaa et Kety
 							</p>
 						</article>
 
@@ -117,7 +117,7 @@
 
 				<!-- Footer -->
 				<footer>
-					<p class="copyright">&copy; <span id="year"></span> semaine des mathématiques</p>
+					<p class="copyright">&copy; 2025 Semaine Des Mathématiques </p>
 				</footer>
 				
 				<script>
