--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<div class="content">
 								<div class="inner">
 									<h1>jeux maths</h1>
-									<p> Semaines des mathématiques </p>
+									<p> Semaine des mathématiques </p>
 								</div>
 							</div>
 						<nav>
@@ -53,8 +53,8 @@
 
 								<p>
 								    Chasse aux énigmes dans tout le collège.<br>
-								    Chaque participant aura un carnet dans lequel trouver l'emplacement des énigmes<br> qui permettra d'arriver au mot magique...
-							    	Carnet à récupérer chez M. Klenklé, en salle A24, durant toute la semaine.
+                                    Chaque participant aura un carnet dans lequel trouver l’emplacement des énigmes,<br> qui permettra d’arriver au mot magique...<br>
+                                    Carnet à récupérer chez M. klenklé, en salle A24, durant toute la semaine.
 							    </p>
 
 							</article>
@@ -64,11 +64,11 @@
 								<h2 class="major">Maths en folie</h2>
 
 							    <p>
-								    Compétition de calcul mental rapide, par équipe de 3.
-								    9 thèmes de mathématiques (additions, multiplications...), donc 3 thèmes par membre de l'équipe.
-							    	Vendredi 14 mars, à partir de 15h45, en salle A24.
-							    	Inscription de votre équipe chez M. Klenklé.
-							    	Equipes mixtes possibles (adultes, élèves, classes différentes...)
+								    Compétition de calcul mental rapide, par équipe de 3.<br>
+                                    9 thèmes de mathématiques (additions, multiplications...), donc 3 thèmes par membre de l'équipe.<br>
+                                    Vendredi 14 mars, à partir de 15h45, en salle A24.<br>
+                                    Inscription de votre équipe chez M. klenklé.<br>
+                                    Équipes mixtes possibles (adultes, élèves, classes différentes...)
 							    </p>
 
 							</article>
@@ -77,11 +77,9 @@
 							<article id="3">
 								<h2 class="major">lez'escape</h2>
 								<p> 
-									<u>Qualifications</u> :  <br /><br /> 
-									- Mardi 11 Mars (S3), <br /> 
-									- Jeudi 13 Mars (S3), <br />
-									Vous participez à une épreuve d'Escape Game que <br />
-									M. Klenklé vous présentera en début d'heure. 
+									Mardi 11 et jeudi 13 mars, en S3, vous pourrez participer à une épreuve d'Escape Game que M. Klenklé vous présentera en début d'heure.<br>
+                                    Inscription, avant lundi 15h30, auprès de M. Klenklé, que vous trouverez dans la cour, en salle A24 ou sur MBN.<br>
+                                    Adultes et élèves sont les bienvenus !!
 								</p> 
 							</article>
 
@@ -90,8 +88,8 @@
 							<h2 class="major">Pajarita</h2>
 						    
 							<p>
-								Création de la plus grande mosaïque du monde. Chaque personne, enfants et adultes, pourra créer un motif qui sera assemblé aux autres pour former une magnifique mosaïque.
-							    Le programme de construction est à chercher chez M. Klenklé, que vous trouverez dans la cour ou en salle A24.
+								Création de la plus grande mosaïque du monde. Chaque personne, enfants et adultes, pourra créer un motif qui sera assemblé aux autres pour former une magnifique mosaïque.<br>
+                                Le programme de construction est à chercher chez M. Klinklé, que vous trouverez dans la cour ou en salle A24.
 							</p>
 
 
@@ -109,7 +107,7 @@
 						<article id="6">
 							<h2 class="major">informations</h2>
 							<p>
-								Pour plus de détails ou en cas de besoin d'aide, veuillez vous rendre auprès d'une de ses personnes : Telman, Lina,  Arda, Nada, Sabine, Mohamed, Yusuf, Alaa et Kety
+								Pour plus de détails ou en cas de besoin d'aide, veuillez vous rendre auprès de l'une de ces personnes : Telman, Lina, Arda, Nada, Sabine, Mohamed, Yusuf, Alaa et Kety.
 							</p>
 						</article>
 
