--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						    
 							<p>
 								Création de la plus grande mosaïque du monde. Chaque personne, enfants et adultes, pourra créer un motif qui sera assemblé aux autres pour former une magnifique mosaïque.<br>
-                                Le programme de construction est à chercher chez M. Klinklé, que vous trouverez dans la cour ou en salle A24.
+                                Le programme de construction est à chercher chez M. Klenklé, que vous trouverez dans la cour ou en salle A24.
 							</p>
 
 
