--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							</div>
 						<nav>
 							<ul>
-								<li><a href="#1">la quête aux énigmes</a></li>
+								<li><a href="#1">quête aux énigmes</a></li>
 								<li><a href="#2">Maths en folie</a></li>
 								<li><a href="#3">lez'escape</a></li>
 								<li><a href="#4">Pajarita</a></li>
@@ -49,7 +49,7 @@
 
 						<!-- Jeux 1 -->
 							<article id="1">
-								<h2 class="major">la quête aux énigmes</h2>
+								<h2 class="major">quête aux énigmes</h2>
 
 								<p>
 								    Chasse aux énigmes dans tout le collège.<br>
