--- a/index.html
+++ b/index.html
@@ -197,7 +197,19 @@
 
 			
 			 </style>
-
+            
+			<style>
+				button {
+					outline: none;
+					-webkit-tap-highlight-color: transparent;
+				}
+			
+				button:focus {
+					outline: none;
+					box-shadow: none;
+				}
+			</style>
+			
 	   <!-- BG -->
 		   <div id="bg"></div>
 
