--- a/index.html
+++ b/index.html
@@ -193,8 +193,13 @@
 				   /* Centrer le texte horizontalement et verticalement */
 				   text-align: center; /* Centre le texte horizontalement */
 				   line-height: 2.86 /* Ajuste la hauteur de ligne pour centrer le texte verticalement */
+				   -webkit-tap-highlight-color: transparent; /* Désactive l'effet bleu au clic sur mobile */
 			   }
 
+			   /* Supprime le soulignement des liens autour des boutons */
+			   .buttons-container a {
+				   text-decoration: none; /* Supprime le soulignement du lien autour du bouton */
+			   }
 			
 			 </style>
             
