--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	   <meta charset="utf-8" />
 	   <meta name="viewport" content="width=device-width, initial-scale=1" />
 	   <link rel="stylesheet" href="assets/css/main.css">
+	   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 	   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
    </head>
    <body class="is-preload">
@@ -50,11 +51,11 @@
 
 					   <!-- Jeux 1 -->
 						   <article id="1">
-							   <h2 class="major">chasse aux énigmes</h2>
+							   <h2 class="major"><i class="fas fa-puzzle-piece"></i> chasse aux énigmes</h2>
 
 							   <p>
 								   Chasse aux énigmes dans tout le collège.<br>
-								   Chaque participant recevra un carnet contenant l'emplacement des énigmes,<br> qui permettra d’arriver au mot magique...<br>
+								   Chaque participant recevra un carnet contenant l'emplacement des énigmes,<br> qui permettra d'arriver au mot magique...<br>
 								   Carnet à récupérer chez M. klenklé, en salle A24, durant toute la semaine.
 							   </p>
 								 
@@ -67,7 +68,7 @@
 
 					   <!-- jeux 2 -->
 						   <article id="2">
-							   <h2 class="major">Maths en folie</h2>
+							   <h2 class="major"><i class="fas fa-calculator"></i> Maths en folie</h2>
 
 							   <p>
 								   Compétition de calcul mental rapide, par équipe de 3.<br>
@@ -87,7 +88,7 @@
 
 					   <!-- jeux 3 -->
 						   <article id="3">
-							   <h2 class="major">lez'escape</h2>
+							   <h2 class="major"><i class="fas fa-door-closed"></i> lez'escape</h2>
 							   <p> 
 								   Mardi 11 et jeudi 13 mars, en S3, vous pourrez participer à une épreuve d'Escape Game que M. Klenklé vous présentera en début d'heure.<br>
 								   Inscription, avant lundi 15h30, auprès de M. Klenklé, que vous trouverez dans la cour, en salle A24 ou sur MBN.<br>
@@ -103,7 +104,7 @@
 
 					   <!-- jeux 4 -->
 					   <article id="4">
-						   <h2 class="major">Pajarita</h2>
+						   <h2 class="major"><i class="fas fa-shapes"></i> Pajarita</h2>
 						   
 						   <p>
 							   Création de la plus grande mosaïque du monde. Chaque personne, enfants et adultes, pourra créer un motif qui sera assemblé aux autres pour former une magnifique mosaïque.<br>
@@ -120,7 +121,7 @@
 
 					   <!-- jeux 5 -->
 					   <article id="5">
-						   <h2 class="major">jeux 5</h2>
+						   <h2 class="major"><i class="fas fa-gamepad"></i> jeux 5</h2>
 						   <p>
 							   En cour ..
 						   </p>
@@ -134,7 +135,7 @@
 
 					   <!-- jeux 6 -->
 					   <article id="6">
-						   <h2 class="major">informations</h2>
+						   <h2 class="major"><i class="fas fa-info-circle"></i> informations</h2>
 						   <p>
 							   Pour plus de détails ou en cas de besoin d'aide, veuillez vous rendre auprès de l'une de ces personnes : Telman, Lina, Arda, Nada, Sabine, Mohamed, Yusuf, Alaa et Kety.
 						   </p>
