--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 							   <li><a href="#2">Maths en folie</a></li>
 							   <li><a href="#3">lez'escape</a></li>
 							   <li><a href="#4">Pajarita</a></li>
-							   <li><a href="#5">jeux 5</a></li>
-							   <li><a href="#6">aide / info</a></li>
+							   <li><a href="#5">aide / info</a></li>
 							   
 						   </ul>
 					   </nav>
@@ -114,27 +113,13 @@
 						   <!-- Conteneur des boutons -->
 						   <div class="buttons-container">
 							   <a href="#3"><button>Jeu précédent</button></a>
-							   <a href="#5"><button>Jeu suivant</button></a>
+							   <a href="#5"><button>aide / info</button></a>
 						   </div>
 
 					   </article>
 
 					   <!-- jeux 5 -->
 					   <article id="5">
-						   <h2 class="major"><i class="fas fa-gamepad"></i> jeux 5</h2>
-						   <p>
-							   En cour ..
-						   </p>
-
-						   <!-- Conteneur des boutons -->
-						   <div class="buttons-container">
-							   <a href="#4"><button>Jeu précédent</button></a>
-							   <a href="#6"><button>aide / info</button></a>
-						   </div>
-					   </article>
-
-					   <!-- jeux 6 -->
-					   <article id="6">
 						   <h2 class="major"><i class="fas fa-info-circle"></i> informations</h2>
 						   <p>
 							   Pour plus de détails ou en cas de besoin d'aide, veuillez vous rendre auprès de l'une de ces personnes : Telman, Lina, Arda, Nada, Sabine, Mohamed, Yusuf, Alaa et Kety.
@@ -142,7 +127,7 @@
 
 						   <!-- Conteneur des boutons -->
 						   <div class="buttons-container">
-							   <a href="#"><button>Acceuil</button></a>
+							   <a href="#"><button>Accueil</button></a>
 						   </div>
 					   </article>
 
