--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							   <p>
 								   Chasse aux énigmes dans tout le collège.<br>
 								   Chaque participant recevra un carnet contenant l'emplacement des énigmes,<br> qui permettra d'arriver au mot magique...<br>
-								   Carnet à récupérer chez M. klenklé, en salle A24, durant toute la semaine.
+								   Carnet à récupérer chez un, en salle A24, durant toute la semaine.
 							   </p>
 								 
 								 <!-- Conteneur des boutons -->
@@ -73,7 +73,7 @@
 								   Compétition de calcul mental rapide, par équipe de 3.<br>
 								   9 thèmes de mathématiques (additions, multiplications...), donc 3 thèmes par membre de l'équipe.<br>
 								   Vendredi 14 mars, à partir de 15h45, en salle A24.<br>
-								   Inscription de votre équipe chez M. klenklé.<br>
+								   Inscription de votre équipe chez une de ses personnes : Alaa, Yusuf et Lina, <br>en cas de problème, rendez-vous chez M. Klenklé.<br>
 								   Équipes mixtes possibles (adultes, élèves, classes différentes...)
 							   </p>
 							   <!-- Conteneur des boutons -->
