--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								   Compétition de calcul mental rapide, par équipe de 3.<br>
 								   9 thèmes de mathématiques (additions, multiplications...), donc 3 thèmes par membre de l'équipe.<br>
 								   Vendredi 14 mars, à partir de 15h45, en salle A24.<br>
-								   Inscription de votre équipe chez une de ses personnes : Alaa, Yusuf et Lina, <br>en cas de problème, rendez-vous chez M. Klenklé.<br>
+								   Inscription de votre équipe chez une de ces personnes : Alaa, Yusuf et Lina, <br>en cas de problème, rendez-vous chez M. Klenklé.<br>
 								   Équipes mixtes possibles (adultes, élèves, classes différentes...)
 							   </p>
 							   <!-- Conteneur des boutons -->
