--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
 							   <p>
 								   Chasse aux énigmes dans tout le collège.<br>
 								   Chaque participant recevra un carnet contenant l'emplacement des énigmes,<br> qui permettra d'arriver au mot magique...<br>
-								   Carnet à récupérer chez un, en salle A24, durant toute la semaine.
+								   Carnet à récupérer chez M. Klenklé, en salle A24, durant toute la semaine.
+								   <h6>créateurs : Sabine, Mohamed, Telman, Kety et Nada.</h6>
 							   </p>
-								 
+								
 								 <!-- Conteneur des boutons -->
 								 <div class="buttons-container">
 								   <a href="#2"><button>Jeu suivant</button></a>
@@ -75,6 +76,7 @@
 								   Vendredi 14 mars, à partir de 15h45, en salle A24.<br>
 								   Inscription de votre équipe chez une de ces personnes : Alaa, Yusuf et Lina, <br>en cas de problème, rendez-vous chez M. Klenklé.<br>
 								   Équipes mixtes possibles (adultes, élèves, classes différentes...)
+								   <h6>créateurs : Alaa, Yusuf et Lina.</h6>
 							   </p>
 							   <!-- Conteneur des boutons -->
 							   <div class="buttons-container">
@@ -92,6 +94,7 @@
 								   Mardi 11 et jeudi 13 mars, en S3, vous pourrez participer à une épreuve d'Escape Game que M. Klenklé vous présentera en début d'heure.<br>
 								   Inscription, avant lundi 15h30, auprès de M. Klenklé, que vous trouverez dans la cour, en salle A24 ou sur MBN.<br>
 								   Adultes et élèves sont les bienvenus !!
+								   <h6>créateur : M. Klenklé.</h6>
 							   </p> 
 
 							   <!-- Conteneur des boutons -->
@@ -108,6 +111,7 @@
 						   <p>
 							   Création de la plus grande mosaïque du monde. Chaque personne, enfants et adultes, pourra créer un motif qui sera assemblé aux autres pour former une magnifique mosaïque.<br>
 							   Le programme de construction est à chercher chez M. Klenklé, que vous trouverez dans la cour ou en salle A24.
+							   <h6>créateur : M. Klenklé.</h6>
 						   </p>
 
 						   <!-- Conteneur des boutons -->
