--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 						   <div class="buttons-container">
 							   <a href="#"><button>Accueil</button></a>
 						   </div>
+						   
 					   </article>
 
 				   </div>
@@ -165,7 +166,7 @@
 				 display: flex;
 				 gap: 10px; /* Espace entre les boutons */
                  text-decoration: none; /* Supprime le soulignement des liens */
-
+				 margin-bottom: 20px; /* Ajoute de l'espace en bas des conteneurs de boutons */
 			   }
 			 
 			   /* Style pour les boutons */
@@ -273,4 +274,6 @@
     }
 </style>
 
+
+</style>
 </html>
