--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 							   <li><a href="#2">Maths en folie</a></li>
 							   <li><a href="#3">lez'escape</a></li>
 							   <li><a href="#4">Pajarita</a></li>
-							   <li><a href="#5">aide / info</a></li>
+							   <li><a href="#5">Math'Kang</a></li>
+							   <li><a href="#6">aide / info</a></li>
 							   
 						   </ul>
 					   </nav>
@@ -117,13 +118,35 @@
 						   <!-- Conteneur des boutons -->
 						   <div class="buttons-container">
 							   <a href="#3"><button>Jeu précédent</button></a>
-							   <a href="#5"><button>aide / info</button></a>
+							   <a href="#5"><button>jeu suivant</button></a>
 						   </div>
 
 					   </article>
 
 					   <!-- jeux 5 -->
 					   <article id="5">
+						<h2 class="major">
+							<img src="images/Pkangaroo.png" style="width: 1.4em; vertical-align: middle; position: relative; top: -0.2em;"> Math'Kang
+						</h2>
+						
+						<p>
+							Le concours international Math'Kangourou aura lieu jeudi 20 mars en M3-M4. 
+                            Il n'y a que 12 places pour les niveaux 6eme-5eme et 13 places pour les niveaux 4eme-3eme.
+                            Les qualifications auront lieu vendredi 14 mars, en S2.
+                            Inscription chez M. Klenklé
+							<h6>créateur : M. Klenklé.</h6>
+						</p>
+
+						<!-- Conteneur des boutons -->
+						<div class="buttons-container">
+							<a href="#4"><button>Jeu précédent</button></a>
+							<a href="#6"><button>aide / info</button></a>
+						</div>
+
+					</article>
+
+					   <!-- info / aide 5 -->
+					   <article id="6">
 						   <h2 class="major"><i class="fas fa-info-circle"></i> informations</h2>
 						   <p>
 							   Pour plus de détails ou en cas de besoin d'aide, veuillez vous rendre auprès de l'une de ces personnes : Telman, Lina, Arda, Nada, Sabine, Mohamed, Yusuf, Alaa et Kety.
