--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 			   <!-- Header -->
 				   <header id="header">
 					   <div class="logo">
-						   <i class="fas fa-divide"></i>
+						   <a href="https://dotfic.com/zDyk" target="_blank">
+							   <i class="fas fa-divide"></i>
+						   </a>
 							<style>
 							  .fa-divide {
 								   font-size: 1.65em; 
