--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 						   
 							<style>
 							  .fa-divide {
-								   font-size: 2em; /* Ajuste la taille pour changer la hauteur */
-								   margin-top: 28px; /* Ajuste la marge supérieure */
+								   font-size: 2.25em; /* Ajuste la taille pour changer la hauteur */
+								   margin-top: 24px; /* Ajuste la marge supérieure */
 								   display: inline-block;
-								   color: #fff; /* Assurez-vous que la couleur est visible */
+								   color: #ffffff; /* Assurez-vous que la couleur est visible */
 								   background: none; /* Supprime tout fond qui pourrait créer un cercle */
 								   border: none; /* Supprime toute bordure qui pourrait créer un cercle */
 							   }
