--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     width: 120px; /* Largeur du cercle */
     height: 120px; /* Hauteur du cercle */
     border-radius: 50%; /* Cercle */
-    background-color: blue; /* Couleur de fond */
+    background-color: transparent; /* Couleur de fond */
     margin: 0 auto; /* Centre horizontalement dans le parent */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Ombre pour effet visuel */
 }
