--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     transform: translate(-50%, -50%); /* Ajuste pour centrer parfaitement */
     display: inline-block; /* Assurez-vous que l'élément est en ligne */
     text-align: center; /* Centre le contenu horizontalement */
-    line-height: 120px; /* Centre le contenu verticalement */
+    line-height: middle; /* Centre le contenu verticalement */
     z-index: 1000; /* Assurez-vous qu'il est au-dessus des autres éléments */
 }
 
