--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 						   
 							<style>
 							  .fa-divide {
-								   font-size: 2em; /* Ajuste la taille pour changer la hauteur */
-								   
+								   font-size: 2.5em; /* Ajuste la taille pour changer la hauteur */
+								   margin-top: 23.5px; /* Ajuste la marge supérieure */
 								   display: inline-block;
 								   color: #ffffff; /* Assurez-vous que la couleur est visible */
 								   background: none; /* Supprime tout fond qui pourrait créer un cercle */
