--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 							<style>
 							  .fa-divide {
 								   font-size: 2.5em; /* Ajuste la taille pour changer la hauteur */
-								   margin-top: 20px; /* Ajuste la marge supérieure */
 								   display: inline-block;
 								   color: #ffffff; /* Assurez-vous que la couleur est visible */
 								   background: none; /* Supprime tout fond qui pourrait créer un cercle */
@@ -376,14 +375,14 @@
     transform: translate(-50%, -50%); /* Ajuste pour centrer parfaitement */
     display: inline-block; /* Assurez-vous que l'élément est en ligne */
     text-align: center; /* Centre le contenu horizontalement */
-    line-height: middle; /* Centre le contenu verticalement */
     z-index: 1000; /* Assurez-vous qu'il est au-dessus des autres éléments */
 }
 
-@media (min-width: 768px) {
-    #division-icon {
-        margin-top: 20px; /* Ajuste la marge supérieure pour les écrans plus larges */
-    }
+.fa-divide {
+    font-size: 2.5em; /* Ajuste la taille pour changer la hauteur */
+    color: #ffffff; /* Assurez-vous que la couleur est visible */
+    display: inline-block;
+    vertical-align: middle; /* Centre verticalement l'icône */
 }
 </style>
 
